# nixcon-2024-workshop

./: .env  .gitignore  Caddyfile  PROJECT_README.md  README.md  STEPS.md  devenv.nix  devenv.yaml  package-lock.json  package.json
backend/: Cargo.toml  openapi.json
backend/src/: common.rs  main.rs
backend/src/api/: flake.rs  publish.rs
frontend/: .gitignore
frontend/generated-api/: README.md
frontend/generated-api/.openapi-generator/: FILES
frontend/generated-api/src/: Api.elm
frontend/generated-api/src/Api/: Data.elm
frontend/generated-api/src/Api/Request/: Api.elm
frontend/src/Pages/Flake/Github/Org_/Repo_/: Version_.elm
migrations/: 20241024171558_init.sql
